# InselBERT

./: .gitignore  Dockerfile  README.md  added_counts.json  bentofile.yaml  pyproject.toml  requirements.txt  service.py  streamlit_app.py
data/output/evaluation_results/: 20240625-075841evaluation_results_qa.csv  20240625-150447evaluation_results_qa.csv
data/output/evaluation_results_pretraining./serialized_models/inselbert/20231019-110350ALL/20240717-133150MAMMOGRAPHY/: all_results.json
data/output/evaluation_results_pretraining./serialized_models/inselbert/20240620-102757MAMMOGRAPHY/20240717-133153MAMMOGRAPHY/: test_results.json
data/output/evaluation_results_pretraining./serialized_models/inselbert/20240620-112101MAMMOGRAPHY_10/20240717-133155MAMMOGRAPHY/: all_results.json
data/output/evaluation_results_pretraining/archive/20231019-110350ALL/20240625-082715MAMMOGRAPHY/: all_results.json
data/output/evaluation_results_pretraining/archive/20240620-102757MAMMOGRAPHY/20240625-082718MAMMOGRAPHY/: all_results.json
data/output/evaluation_results_pretraining/archive/20240620-112101MAMMOGRAPHY_10/20240625-082720MAMMOGRAPHY/: all_results.json
data/output/evaluation_results_pretraining/archive/medbert-51220240625-082709MAMMOGRAPHY/: all_results.json
data/output/evaluation_results_pretrainingGerMedBERT/medbert-51220240717-133145MAMMOGRAPHY/: test_results.json
data/synthetic_reports/: Smaragd_synthetic_reports.csv
data/test/: fact_schema_v13.html  fact_schema_v14.html  fact_schema_v31.html  fact_schema_v41.html  offset_format_example.json  radiology-reports.csv  smaragd_test_cas.xmi  test.json  test.jsonlines  train.jsonlines  validation.jsonlines
notebooks/: 1.0-dr-steinkamp-llm-01.ipynb  1.0-dr-sujitpal-ner-native.ipynb  2.0-dr-hf-llm-steinkamp.ipynb  2.0-dr-multilabel-javaness.ipynb  2.0-dr-multilabel-native-pytorch.ipynb  display_results.ipynb  request.py  test.ipynb
src/: bentofile.yaml  constants.py  service.py
src/fact_extraction_model/: shared.py
src/fact_extraction_model/data/: convert_IOB_to_dataset.py
src/fact_extraction_model/evaluation/: exec_evaluation.py
src/fact_extraction_model/inference/: exec_inference.py
src/fact_extraction_model/model/: bert_fact_extraction.py  bert_multilabel_classification.py  bert_token_classification.py  bert_two_heads.py  bert_two_heads_Trainer.py
src/fact_extraction_model/training/: exec_training.py  exec_training_Trainer.py  exec_training_multilabel.py  exec_training_singleclass.py
src/fact_extraction_model/training/wandb/: latest-run
src/fact_extraction_model/training/wandb/run-20231024_091647-qcmi2zkd/: run-qcmi2zkd.wandb
src/fact_extraction_model/training/wandb/run-20231024_091647-qcmi2zkd/files/: config.yaml  requirements.txt  wandb-metadata.json
src/further_pre_training/evaluation/: exec_evaluation.py
src/further_pre_training/training/: exec_training.py
src/llama_evaluation/: evaluate.py  example_template.py  output_example.json  output_schema.json  prompt_template.py
src/qa_model/: make_bento.py  run_inference.py
src/qa_model/evaluation/: exec_evaluation.py
src/qa_model/training/: exec_training.py  exec_training_custom.py  exec_training_example.py
src/qa_model_hf/: make_bento.py  make_json.py  run_inference.py
src/qa_model_hf/evaluation/: exec_evaluation.py  exec_evaluation_mcnemar.py  exec_evaluation_multiple.py
src/refinement_model/inference/: service.py
src/refinement_model/model/: bert_token_classification_refinement.py
src/refinement_model/training/: exec_training.py
src/seq_labelling_model/: analyze_cross_validation.py  exec_evaluation.py  exec_evaluation_multiple.py  exec_inference.py  exec_training.py  make_bento.py
src/shared/: ID-abbreviation-list.txt  cas_loader.py  class_statistics_generator.py  corpus_loader.py  dataset_entry.py  dataset_helper.py  fact_reasoner.py  json_loader.py  label_id_mapper.py  model_helper.py  model_helpers.py  offset_entry.py  openai_api.py  schema_generator.py  smaragd_tokenizer.py  wandb_helper.py
src/tokenization/evaluation/: exec_evaluation.py
src/tokenization/training/: exec_training.py
